# Depth-Anything-3-ROS2

./: .dockerignore  .flake8  .gitignore  ACKNOWLEDGEMENTS.md  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  docker-compose.yml  mypy.ini  package.xml  pyproject.toml  requirements.txt  setup.py
.devcontainer/: devcontainer.json
.github/: PULL_REQUEST_TEMPLATE.md  copilot-instructions.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml  question.yml
.github/workflows/: ci.yml
config/: params.yaml
config/camera_configs/: generic_usb.yaml  realsense.yaml  zed.yaml
depth_anything_3_ros2/: .gitignore  __init__.py  da3_inference.py  da3_inference_optimized.py  depth_anything_3_node.py  depth_anything_3_node_optimized.py  gpu_utils.py  package.xml  requirements.txt  utils.py
depth_anything_3_ros2/depth_anything_3_ros2/: depth_anything_3_node.py  utils.py
depth_anything_3_ros2/launch/: depth_anything_3.launch.py
depth_anything_3_ros2/launch/examples/: usb_camera_example.launch.py  zed_camera_example.launch.py
depth_anything_3_ros2/scripts/: depth_anything_3_node  depth_anything_3_node_optimized
depth_anything_3_ros2/test/: test_generic_camera.py  test_inference.py  test_node.py
docker/: README.md  ros_entrypoint.sh  test_docker.sh
docs/: requirements.txt
docs/source/: conf.py  index.rst
docs/source/api/: da3_inference.rst  depth_anything_3_node.rst  modules.rst  utils.rst
docs/source/tutorials/: multi_camera.rst  performance_tuning.rst  quick_start.rst  usb_camera.rst
examples/: README.md
examples/scripts/: benchmark.py  depth_postprocess.py  download_samples.sh  multi_camera_sync.py  optimize_tensorrt.py  performance_tuning.py  profile_node.py  ros2_batch_process.sh  test_with_images.py
launch/: depth_anything_3_optimized.launch.py  multi_camera.launch.py
launch/examples/: gazebo_camera_example.launch.py  image_publisher_test.launch.py  oakd_camera_example.launch.py  realsense_example.launch.py  rosbag_playback_example.launch.py
rviz/: depth_view.rviz
scripts/: convert_to_tensorrt.py
test/: test_generic_camera.py  test_inference.py  test_node.py
