<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>depth_anything_3_ros2</name>
  <version>1.0.0</version>
  <description>
    Camera-agnostic ROS2 wrapper for Depth Anything 3 monocular depth estimation.
    This package provides real-time depth estimation from standard RGB images
    using the state-of-the-art Depth Anything 3 model from ByteDance.
  </description>
  <maintainer email="your@email.com">Your Name</maintainer>
  <license>MIT</license>

  <author>Your Name</author>

  <url type="website">https://github.com/yourusername/depth_anything_3_ros2</url>
  <url type="bugtracker">https://github.com/yourusername/depth_anything_3_ros2/issues</url>
  <url type="repository">https://github.com/yourusername/depth_anything_3_ros2</url>

  <!-- Build dependencies -->
  <buildtool_depend>ament_python</buildtool_depend>

  <!-- Runtime dependencies -->
  <depend>rclpy</depend>
  <depend>sensor_msgs</depend>
  <depend>std_msgs</depend>
  <depend>cv_bridge</depend>
  <depend>image_transport</depend>

  <!-- Test dependencies -->
  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
